--- a/src/assets/styles/local.scss
+++ b/src/assets/styles/local.scss
@@ -7,6 +7,7 @@
 }
 
 :root {
+   --white: #fff;
    --bg-button: rgba(231, 240, 255, 1);
    --blue: rgba(0, 106, 255, 1);
    --light-blue: rgba(0, 106, 255, 0.36);
