--- a/src/pages/application/bosh-sahifa/style/header.scss
+++ b/src/pages/application/bosh-sahifa/style/header.scss
@@ -1,5 +1,6 @@
 .header {
    padding: 50px 110px;
+   position: relative;
 
    .title {
       text-align: center;
@@ -59,7 +60,7 @@
    }
    .left {
       position: absolute;
-      top: 180px;
+      top: 80px;
       left: 50px;
 
       img {
@@ -68,10 +69,140 @@
    }
    .right {
       position: absolute;
-      top: 160px;
+      top: 60px;
       right: 30px;
       img {
          width: 200px;
+      }
+   }
+   @media screen and (max-width: 1200px) {
+      padding: 50px 70px;
+
+      .title {
+         h1 {
+            font-size: 65px;
+         }
+         span {
+            font-size: 32px;
+         }
+      }
+      .left {
+         position: absolute;
+         top: 100px;
+         left: 50px;
+
+         img {
+            width: 200px;
+         }
+      }
+
+      .right {
+         position: absolute;
+         top: 100px;
+         right: 50px;
+
+         img {
+            width: 140px;
+         }
+      }
+   }
+   @media screen and (max-width: 992px) {
+      padding: 50px;
+
+      .title {
+         h1 {
+            font-size: 60px;
+         }
+         span {
+            font-size: 30px;
+         }
+         p {
+            font-size: 18px;
+         }
+      }
+      .left {
+         position: absolute;
+         top: 100px;
+         left: 0px;
+
+         img {
+            width: 180px;
+         }
+      }
+
+      .right {
+         position: absolute;
+         top: 100px;
+         right: 50px;
+
+         img {
+            width: 120px;
+         }
+      }
+   }
+   @media screen and (max-width: 768px) {
+      padding: 50px 30px;
+
+      .title {
+         width: 100%;
+         h1 {
+            font-size:50px;
+         }
+         span {
+            font-size: 26px;
+         }
+         p {
+            font-size: 16px;
+         }
+      }
+      .left {
+         position: absolute;
+         top: 100px;
+         left: 0px;
+
+         img {
+            width: 180px;
+         }
+      }
+
+      .right {
+         position: absolute;
+         top: 100px;
+         right: 50px;
+
+         img {
+            width: 120px;
+         }
+      }
+   }
+
+   @media screen and (max-width: 568px) {
+      padding: 50px 16px;
+
+      .title {
+         width: 100%;
+         h1 {
+            font-size:35px;
+         }
+         span {
+            font-size: 20px;
+         }
+         p {
+            font-size: 15px;
+            padding-top: 20px;
+         }
+      }
+      .buttons {
+         button {
+            font-size: 18px;
+            padding: 8px 16px;
+         }
+         .flex h3 {
+            font-size: 16px;
+         }
+      }
+      .left, .right {
+         display: none;
       }
    }
 }
