--- a/src/pages/application/bosh-sahifa/style/header.scss
+++ b/src/pages/application/bosh-sahifa/style/header.scss
@@ -2,21 +2,25 @@
    padding: 50px 110px;
    position: relative;
 
+
    .title {
       text-align: center;
       width: 656px;
       margin: 0 auto;
+
       h1 {
          color: var(--blue);
          font-size: 72px;
          font-family: Gidroy-Bold;
       }
+
       span {
          color: var(--black);
          font-size: 36px;
          font-family: Gidroy-Bold;
          margin-top: 0px;
       }
+
       p {
          font-size: 20px;
          color: var(--black);
@@ -24,6 +28,7 @@
          padding-top: 30px;
       }
    }
+
    .buttons {
       text-align: center;
       display: flex;
@@ -58,6 +63,7 @@
          }
       }
    }
+
    .left {
       position: absolute;
       top: 80px;
@@ -67,14 +73,17 @@
          width: 270px;
       }
    }
+
    .right {
       position: absolute;
       top: 60px;
       right: 30px;
+
       img {
          width: 200px;
       }
    }
+
    @media screen and (max-width: 1200px) {
       padding: 50px 70px;
 
@@ -82,10 +91,12 @@
          h1 {
             font-size: 65px;
          }
+
          span {
             font-size: 32px;
          }
       }
+
       .left {
          position: absolute;
          top: 100px;
@@ -106,6 +117,7 @@
          }
       }
    }
+
    @media screen and (max-width: 992px) {
       padding: 50px;
 
@@ -113,13 +125,16 @@
          h1 {
             font-size: 60px;
          }
+
          span {
             font-size: 30px;
          }
+
          p {
             font-size: 18px;
          }
       }
+
       .left {
          position: absolute;
          top: 100px;
@@ -140,21 +155,26 @@
          }
       }
    }
+
    @media screen and (max-width: 768px) {
       padding: 50px 30px;
 
       .title {
          width: 100%;
+
          h1 {
-            font-size:50px;
+            font-size: 50px;
          }
+
          span {
             font-size: 26px;
          }
+
          p {
             font-size: 16px;
          }
       }
+
       .left {
          position: absolute;
          top: 100px;
@@ -181,27 +201,34 @@
 
       .title {
          width: 100%;
+
          h1 {
-            font-size:35px;
+            font-size: 35px;
          }
+
          span {
             font-size: 20px;
          }
+
          p {
             font-size: 15px;
             padding-top: 20px;
          }
       }
+
       .buttons {
          button {
             font-size: 18px;
             padding: 8px 16px;
          }
+
          .flex h3 {
             font-size: 16px;
          }
       }
-      .left, .right {
+
+      .left,
+      .right {
          display: none;
       }
    }
