--- a/src/pages/dashboard/user/styles/panel.module.scss
+++ b/src/pages/dashboard/user/styles/panel.module.scss
@@ -4,7 +4,23 @@
 }
 
 .userPanel {
-   background-color: blue;
    width: 100%;
    height: 100vh;
+}
+
+.kurslarimList {
+   width: 100%;
+   display: flex;
+   align-items: center;
+   column-gap: 20px;
+   row-gap: 26px;
+   flex-wrap: wrap;
+}
+
+.kurslarim {
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   row-gap: 36px;
+   padding: 0px 26px 60px 26px;
 }
