--- a/src/pages/application/bosh-sahifa/style/yangi-kurslar.scss
+++ b/src/pages/application/bosh-sahifa/style/yangi-kurslar.scss
@@ -92,11 +92,14 @@
                justify-content: space-between;
                padding-top: 10px;
                margin-top: 5px;
-               gap: 30px;
+               gap: 25px;
 
                h3 {
                   color: var(--grey-072);
                   font-size: 17px;
+                  @media screen and (max-width: 568px) {
+                     font-size: 14px;
+                  }
 
                   span {
                      color: var(--grey-036);
@@ -106,9 +109,13 @@
                h2 {
                   background-color: rgba(17, 17, 17, 0.06);
                   color: rgba(17, 17, 17, 0.54);
-                  font-size: 18px;
+                  font-size: 16px;
                   border-radius: 12px;
                   padding: 7px 15px;
+
+                  @media screen and (max-width: 568px) {
+                     padding: 10px 7px;
+                  }
 
                   &:active {
                      cursor: pointer;
@@ -136,7 +143,7 @@
       }
    }
    @media screen and (max-width: 568px) {
-      padding: 50px 16px;
+      padding: 30px 16px;
       .title {
          h1 {
             font-size: 30px;
