Berilgan joyni tugatdim

--- a/src/assets/styles/local.scss
+++ b/src/assets/styles/local.scss
@@ -6,6 +6,7 @@
    font-family: Gidroy-Medium;
    list-style-type: none;
    text-decoration: none;
+   overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
