--- a/src/pages/application/bosh-sahifa/style/yangi-kurslar.scss
+++ b/src/pages/application/bosh-sahifa/style/yangi-kurslar.scss
@@ -127,6 +127,20 @@
          }
       }
    }
+   .link {
+      text-align: center;
+      padding-top: 50px;
+
+      button {
+         color: var(--white);
+         background: var(--blue);
+         border: none;
+         border-radius: 14px;
+         padding: 15px 50px;
+         font-size: 18px;
+         cursor: pointer;
+      }
+   }
    @media screen and (max-width: 1200px) {
       padding: 50px 70px;
    }
