--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -1,5 +1,6 @@
 .footer {
    padding: 20px 110px;
+   overflow-x: hidden;
 
    .boxes {
       display: grid;
@@ -8,9 +9,9 @@
       border-bottom: 2px solid rgba(17, 17, 17, 0.06);
       padding-bottom: 20px;
       .box {
-          img {
-               margin-left: -12px;
-          }
+         img {
+            margin-left: -12px;
+         }
          .social {
             display: flex;
             align-items: center;
