--- a/src/pages/application/bosh-sahifa/style/statistic.scss
+++ b/src/pages/application/bosh-sahifa/style/statistic.scss
@@ -2,6 +2,7 @@
    padding: 50px 110px;
    background: var(--blue);
    margin-top: 20px;
+   overflow-x: hidden;
 
    .boxes {
       display: grid;
