--- a/src/pages/application/bosh-sahifa/style/courses.scss
+++ b/src/pages/application/bosh-sahifa/style/courses.scss
@@ -1,5 +1,6 @@
 .courses {
    padding: 50px 110px;
+   overflow-x: hidden;
 
    .title {
       text-align: center;
@@ -73,8 +74,8 @@
          font-size: 18px;
          cursor: pointer;
 
-         &:active{
-            transform: scale(0.9)
+         &:active {
+            transform: scale(0.9);
          }
       }
    }
@@ -110,20 +111,20 @@
       }
    }
    @media screen and (max-width: 568px) {
-     padding: 50px 16px;
+      padding: 50px 16px;
 
-     .title {
-        h3 {
-           font-size: 18px;
-        }
-        h1 {
-           font-size: 30px;
-           width: 100%;
-        }
-     }
+      .title {
+         h3 {
+            font-size: 18px;
+         }
+         h1 {
+            font-size: 30px;
+            width: 100%;
+         }
+      }
 
-     .boxes {
-        padding: 50px 0px;
-     }
-  }
+      .boxes {
+         padding: 50px 0px;
+      }
+   }
 }
