--- a/src/pages/dashboard/user/styles/panel.module.scss
+++ b/src/pages/dashboard/user/styles/panel.module.scss
@@ -1,11 +1,10 @@
 .userPanel {
    display: flex;
-   height: 100vh;
 }
 
 .userPanel {
    width: 100%;
-   height: 100vh;
+   height: auto;
 }
 
 .kurslarimList {
@@ -27,7 +26,6 @@
    padding: 0px 26px 60px 26px;
 }
 
-
-.main{
+.main {
    width: 100%;
 }
