--- a/src/pages/application/home/style/top-course.css
+++ b/src/pages/application/home/style/top-course.css
@@ -16,6 +16,7 @@
 .top-course .boxes {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  justify-items: center;
   gap: 50px;
   padding-top: 50px;
 }
