--- a/src/pages/application/home/style/top-course.scss
+++ b/src/pages/application/home/style/top-course.scss
@@ -18,6 +18,7 @@
    .boxes {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      justify-items: center;
       gap: 50px;
       padding-top: 50px;
 
