--- a/src/assets/styles/course.module.scss
+++ b/src/assets/styles/course.module.scss
@@ -46,6 +46,20 @@
       color: #006aff;
    }
 }
+.editButton {
+   width: 100%;
+   height: 43px;
+   border-radius: 16px;
+   background: #e7f0ff;
+   font-size: 16px;
+   font-style: normal;
+   font-weight: 500;
+   line-height: normal;
+   color: #006aff;
+   border: none;
+   // &:hover {
+   // }
+}
 .text {
    color: rgba(17, 17, 17, 0.72);
    font-size: 18px;
@@ -54,6 +68,7 @@
    line-height: normal;
    text-align: start;
    height: 50px;
+   overflow: hidden;
 }
 .mantine-Image-image {
    height: 160px;
